envoy/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 18000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: web_service
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    config:
                      name: envoy_wasm_filter
                      root_id: envoy_wasm_filter
                      configuration:
                        "@type": type.googleapis.com/google.protobuf.StringValue
                        value: |
                          {
                            "grpc_service": "grpc_service"
                          }
                      vm_config:
                        vm_id: vm.sentinel.envoy_wasm_filter
                        runtime: envoy.wasm.runtime.v8
                        code:
                          local:
                            filename: /etc/envoy_wasm_filter.wasm
                        allow_precompiled: true
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: web_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: web_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: web_service
                  port_value: 80
    - name: grpc_service
      connect_timeout: 1s
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: grpc_service
                  port_value: 4770

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 18001
